--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 	<div class="settings">
-		<label>
+		<label class="input-label">
 			<p class="input-title">Width:</p>
 			<input type="text" name="" value="40" class="settings-input width-input">
 		</label> 
-		<label>
+		<label class="input-label">
 			<p class="input-title">Height:</p>
 			<input type="text" name="" value="40" class="settings-input height-input">
 		</label>
@@ -22,6 +22,10 @@
 
 		<label>
 			<button class="move-btn settings-btn">Move</button>
+		</label>
+		<label>
+			<p class="input-title">Auto Move</p>
+			<input type="checkbox" name="" class="settings-input">
 		</label>
 	</div>
 
