--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<div class="settings">
 		<label class="input-label">
 			<p class="input-title">Width:</p>
-			<input type="text" name="" value="40" class="settings-input width-input">
+			<input type="text" name="" value="10" class="settings-input width-input">
 		</label> 
 		<label class="input-label">
 			<p class="input-title">Height:</p>
 			<input type="text" name="" value="40" class="settings-input height-input">
 		</label>
 		<label>
-			<button class="submit-btn settings-btn" type="subnit">Submit</button>
+			<button class="submit-btn settings-btn" type="submit">Create</button>
 		</label>
 
 		<label>
